fixed text on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -131,8 +131,8 @@
     margin-right: 30px;
 }
 .flex-text {
-    width: 550px;
-    min-width: 400px;
+    max-width: 550px;
+    min-width: 350px;
     text-align: left;
     margin: auto;
     
